--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "vitepress dev docs",
-    "build": "vitepress build docs",
+    "docs:build": "vitepress build docs",
+    "docs:serve": "vitepress serve docs",
     "register:components": "vitepress-rc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
