--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,13 +14,13 @@ jobs:
         with:
           node-version: 16
           cache: yarn
-      - run: yarn install
+      - run: yarn install --frozen-lockfile
 
       - name: Build
-        run: yarn run build
+        run: yarn docs:build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: dist
+          publish_dir: docs/.vitepress/dist
