--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@types/node": "^18.16.0",
+    "unocss": "^0.51.0",
+    "unplugin-icons": "^0.16.0",
+    "unplugin-vue-components": "^0.24.0",
     "vitepress": "1.0.0-alpha.4",
     "vue": "^3.2.37"
   },
