--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@iconify-json/fa6-solid": "^1.1.13",
     "@types/node": "^18.16.0",
     "unocss": "^0.51.0",
     "unplugin-icons": "^0.16.0",
@@ -22,6 +23,7 @@
     "vue": "^3.2.37"
   },
   "dependencies": {
+    "medium-zoom": "^1.0.8",
     "sass": "^1.54.3",
     "sass-loader": "^13.0.2"
   }
